--- a/_posts/rCompanies/rMEDIA/2022-04-06-rPlayGym.markdown
+++ b/_posts/rCompanies/rMEDIA/2022-04-06-rPlayGym.markdown
@@ -268,7 +268,7 @@ image:    "rmedia-icon.svg"
  <h6 id="en03">3. 	<a href="#id03">n</a> MLB Farm System Ranking Factors &lt;<a href="https://radicals.world/ATiAcH">https://radicals.world/ATiAcH</a>> (alt., <a href="https://diigo.com/0jwkj3">https://diigo.com/0jwkj3</a>).</h6>
  <h6 id="en04">4. 	<a href="#id04">n</a> Kimberly Wiefling’s profile, &lt;<a href="https://radicals.world/zHL0lt">https://radicals.world/zHL0lt</a>></h6>
 
-<h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60 0 20 0; ">APPENDICES</h1>
+<h1 class="_section">APPENDICES</h1>
 <h2 style="font-size:30px; font-family:Courier New, monospace; ">Recruiting</h1>
  <ul>
   <li>From the moment a candidate voices an interest in joining the team, think of her as already in your team.</li>
@@ -355,54 +355,61 @@ image:    "rmedia-icon.svg"
  <p>We learn this habit at home, when we are little. We let our caretakers guide our chickens as they teach us the basics of staying alive. Once we enter school, most of our teachers, unfortunately, take our chickens from us outright. “You must learn discipline,” they tell us, “and I’ll tell you how to behave.” Throughout school we learn that obedience comes first: if we don’t please the teacher, we don’t get the sticker, or, worse, we are sent to the Principal’s office. Finally, we reach college, but by then the habit is deeply ingrained. Undergraduates are like high-schoolers with a bit more freedom outside of school, but in school it is a game of pleasing the professor and getting good grades. Grad students are often referred to as “slave labor” for their supervisors. By the time we start to work, we are fully conditioned to hand our chickens to our superiors, “Where do I sit? What team am I in? What do you want me to do, boss?”We have to grow out of the habit of letting go of our chicken. We need to learn to hold on to it. In fact, we can make companies better all around by holding on to our chicken. We can collaborate more openly, experiment more, innovate more, come up with outside-the-box solutions more often. We can bring our full selves to work, take off our masks, and stop holding back. We can bring real value as we create with others.</p>
  <p>Ideally, we would not learn the habit of giving up our chicken so easily in the first place, but at our workplaces we can certainly replace that terrible habit with the habit of holding on to our chicken.</p>
 
-<h1 style="font-size:50px; font-family:Courier New, monospace; text-align:center; margin: 60px 0 20px 0; ">RELATED</h1>
+<h1 class="_section">RELATED</h1>
  <ul>
-  <li><span style="font-size:smaller; ">RADICAL</span> COMPANIES,</li>
+  <li>RADICAL COMPANIES,</li>
    <ul>
-    <li><a>EN</a>: <a href="https://radicalcompanies.com" target="blank">&hellip;</a></li>
-    <li><a>ES</a>: <a href="https://radicalcompanies.com" target="blank">&hellip;</a></li>
+    <li><a>English</a>: <a href="https://radicalcompanies.com" target="_blank">&hellip;/https://radicalcompanies.com</a></li>
+    <li><a>Spanish</a>: <a href="https://radicalcompanies.com" target="_blank">&hellip;/https://radicalcompanies.com</a></li>
    </ul>
-  <li>Blog posts,</li>
+  <li>Blog</li>
    <ul>
-    <li>For the Impatient: <a href="https://radicalcompanies.com/2022/05/04/RADICAL-COMPANIES-impatient" target="blank">&hellip;/RADICAL-COMPANIES-impatient</a></li>
-    <li>Frequently Asked Questions (FAQ): <a href="https://radicalcompanies.com/2022/05/05/RADICAL-COMPANIES-faq" target="blank">&hellip;/RADICAL-COMPANIES-faq</a></li>
+    <li>Missing Chapters,</li>
+     <ul>
+      <li>For the Impatient: <a href="https://radicalcompanies.com/2022/05/03/radical-companies-for-the-impatient" target="_blank">https://radicalcompanies.com/2022/05/03/radical-companies-for-the-impatient</a></li>
+      <li>Frequently Asked Questions (FAQ): <a href="https://radicalcompanies.com/2022/05/04/radical-companies-faq" target="_blank">https://radicalcompanies.com/2022/05/04/radical-companies-faq</a></li>
+      <li>rCoin: <a href="https://radicalcompanies.com/2022/05/07/rcoin.html" target="_blank">https://radicalcompanies.com/2022/05/07/rcoin.html</a></li>
+      <li>rLand: <a href="https://radicalcompanies.com/2022/05/06/rland.html" target="_blank">https://radicalcompanies.com/2022/05/06/rland.html</a></li>
+      <li>rGov: <a href="https://radicalcompanies.com/2022/05/05/rgov.html" target="_blank">https://radicalcompanies.com/2022/05/05/rgov.html</a></li>
+     </ul>
+    <li>New Posts <a href="https://radicalcompanies.com/2022/05/08/the-weakness-of-progressive-organizations" target="_blank">https://radicalcompanies.com/2022/05/08/the-weakness-of-progressive-organizations</a></li>
    </ul>
-   <li>The Missing Chapters,</li>
-    <ul>
-     <li>RADICAL COIN: <a href="https://radicalcompanies.com/2022/05/07/rcoins" target="blank">&hellip;/rcoins</a></li>
-     <li>RADICAL Land: <a href="https://radicalcompanies.com/2022/05/08/rland" target="blank">&hellip;/rland</a></li>
-     <li>RADICAL Government: <a href="https://radicalcompanies.com/2022/05/06/rgovernment" target="blank">&hellip;/rgovernment</a></li>
+  <li>rCompanies</li>
+   <ul>
+    <li>rEnsembles,</li>
+     <ul>
+      <li> rStayHome: <a href="https://radicalcompanies.com/2022/05/12/rStayHome" target="_blank">https://radicalcompanies.com/2022/05/12/rStayHome</a></li>
+      <li>     rKare: <a href="https://radicalcompanies.com/2022/05/13/rKare" target="_blank">https://radicalcompanies.com/2022/05/13/rKare</a></li>
+      <li>    rClean: <a href="https://radicalcompanies.com/2022/05/14/rClean" target="_blank">https://radicalcompanies.com/2022/05/14/rClean</a></li>
+      <li>     rCORE: <a href="https://radicalcompanies.com/2022/05/15/rCORE" target="_blank">https://radicalcompanies.com/2022/05/15/rCORE</a></li>
+      <li>rHatchery: <a href="https://radicalcompanies.com/2022/05/16/rHatchery" target="_blank">https://radicalcompanies.com/2022/05/16/rHatchery</a></li>
+     </ul>
+    <li>rMEDIA,</li>
+     <ul>
+      <li> rReader: <a href="https://radicalcompanies.com/2022/04/01/rReader" target="_blank">https://radicalcompanies.com/2022/04/01/rReader</a></li>
+      <li>  rShelf: <a href="https://radicalcompanies.com/2022/04/02/rShelf" target="_blank">https://radicalcompanies.com/2022/04/02/rShelf</a></li>
+      <li>    rMBA: <a href="https://radicalcompanies.com/2022/04/03/rMBA" target="_blank">https://radicalcompanies.com/2022/04/03/rMBA</a></li>
+      <li>  rLIVE!: <a href="https://radicalcompanies.com/2022/04/04/rLive" target="_blank">https://radicalcompanies.com/2022/04/04/rLive</a></li>\
+      <li>rCircuit: <a href="https://radicalcompanies.com/2022/04/05/rCircuit" target="_blank">https://radicalcompanies.com/2022/04/05/rCircuit</a></li>
+      <li>rPlayGym: <a href="https://radicalcompanies.com/2022/04/06/rPlayGym" target="_blank">https://radicalcompanies.com/2022/04/06/rPlayGym</a></li>
+      <li>  rMedia: <a href="https://radical-companies-repo/2022/04/06/rplaygym" target="_blank">https://radical-companies-repo/2022/04/06/rplaygym</a></li>
     </ul>
-   <li>rCompanies</li>
+   <li>rFiction,</li>
     <ul>
-     <li>rPRADERA MEDIA,</li>
-      <ul>
-       <li>PRADERA Shelf: <a href="https://radicalcompanies.com/2022/04/02/PRADERA-Shelf" target="blank">&hellip;/PRADERA-Shelf</a></li>
-       <li>PRADERA Reader: <a href="https://radicalcompanies.com/2022/04/01/PRADERA-Reader" target="blank">&hellip;/PRADERA-Reader</a></li>
-       <li>RADICALS.LIVE!: <a href="https://radicalcompanies.com/2022/04/04/RADICALS-Live" target="blank">&hellip;/RADICALS-Live</a></li>
-       <li>RADICAL MBA: <a href="https://radicalcompanies.com/2022/04/03/RADICAL-MBA" target="blank">&hellip;/RADICAL-MBA</a></li>
-      </ul>
-     <li>rHatchery: <a href="https://radicalcompanies.com/2022/05/16/rHatchery" target="blank">&hellip;/rHatchery</a></li>
-     <li>rCircuit: <a href="https://radicalcompanies.com/2022/04/05/rCircuit" target="blank">&hellip;/rCircuit</a></li>
-     <li>rPlayGym: <a href="https://radicalcompanies.com/2022/04/06/rPlayGym" target="blank">&hellip;/rPlayGym</a></li>
-     <li>rEnsembles,</li>
-      <ul>
-       <li>rCORE: <a href="https://radicalcompanies.com/2022/05/15/rCORE" target="blank">&hellip;/rCORE</a></li>
-       <li>rClean: <a href="https://radicalcompanies.com/2022/05/14/rClean" target="blank">&hellip;/rClean</a></li>
-       <li>rStayHome: <a href="https://radicalcompanies.com/2022/05/12/rStayHome" target="blank">&hellip;/rStayHome</a></li>
-       <li>rKidsCare: <a href="https://radicalcompanies.com/2022/05/13/rKidsKare" target="blank">&hellip;/rKidsKare</a></li>
-      </ul>
+     <li>  First of Earth (11 episodes): <a href="https://radical-companies-repo/2022/03/01/E01-first-of-earth" target="_blank">https://radical-companies-repo/2022/03/01/E01-first-of-earth</a></li>
+     <li>The FIAT Enclaves (3 episodes): <a href="https://2022/03/11/E11/the-fiat-enclaves" target="_blank">https://2022/03/11/E11/the-fiat-enclaves</a></li>
     </ul>
-  <li>rStartups,</li>
-   <ul>
-    <li>rBuddyNeighbor: <a href="https://radicalcompanies.com/2022/05/20/rBuddyNeighbor" target="blank">&hellip;/rBuddyNeighbor</a></li>
-    <li>rNextBright: <a href="https://radicalcompanies.com/2022/05/22/rNextBright" target="blank">&hellip;/rNextBright</a></li>
-    <li>rHintersoft: <a href="https://radicalcompanies.com/2022/05/21/rHintersoft" target="blank">&hellip;/rHintersoft</a></li> 
-   </ul>
-  <li>rProjects,</li>
-   <ul>
-    <li>REMARK!: <a href="https://radicalcompanies.com/2022/05/18/REMARK" target="blank">&hellip;/REMARK</a></li>
-    <li>RADs!: <a href="https://radicalcompanies.com/2022/05/19/RADs!" target="blank">&hellip;/RADs!</a></li>
-    <li>Attentive UI: <a href="https://radicalcompanies.com/2022/05/17/attentive-ui.html" target="blank">&hellip;attentive-ui.html</a></li>
-   </ul>
- </ul>
+   <li>rProjects,</li>
+    <ul>
+     <li>      rMake!: <a href="https://radicalcompanies.com/2022/05/20/rmake" target="_blank">https://radicalcompanies.com/2022/05/20/rmake</a></li>
+     <li>    rRemark!: <a href="https://radicalcompanies.com/2022/05/21/remark" target="_blank">https://radicalcompanies.com/2022/05/21/remark (API)</a></li>
+     <li>       RADs!: <a href="https://radicalcompanies.com/2022/05/22/rads!" target="_blank">https://radicalcompanies.com/2022/05/22/rads! (App)</a></li>
+     <li>Attentive UI: <a href="https://radicalcompanies.com/2022/05/23/attentive-ui" target="_blank">https://radicalcompanies.com/2022/05/23/attentive-ui</a></li>
+    </ul>
+   <li>rStartups,</li>
+    <ul>
+     <li>rBuddyNeighbor: <a href="https://radicalcompanies.com/2022/05/17/rBuddyNeighbor" target="_blank">https://radicalcompanies.com/2022/05/17/rBuddyNeighbor</a></li>
+     <li>   rHintersoft: <a href="https://radicalcompanies.com/2022/05/18/rHintersoft" target="_blank">https://radicalcompanies.com/2022/05/18/rHintersoft</a></li> 
+     <li>   rNextBright: <a href="https://radicalcompanies.com/2022/05/19/rNextBright" target="_blank">https://radicalcompanies.com/2022/05/19/rNextBright</a></li>
+    </ul>
+  </ul>
