--- a/_posts/Missing Chapters/2022-05-06-rland.markdown
+++ b/_posts/Missing Chapters/2022-05-06-rland.markdown
@@ -15,7 +15,7 @@ image:    "icon-everybody-works-but-the-vacant-lot.svg"
  <pre style="text-align:right; ">&mdash; Abraham Lincoln<sup><a href="#fn1" rel="footnote">1</a></sup></pre>
 </div>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; ">Land Defines Local</h1>
+<h1>Land Defines Local</h1>
  <p style="text-align: justify; ">In the book <span style="font-size:smaller; "><a href="https://radicalcompanies.com">RADICAL COMPANIES</a></span>, we only considered how the <span style="font-size: smaller; ">RADICAL</span> model would work in <em>a company environment</em>, and other than a mention, we said nothing about money, land, or governments.</p>
  <p style="text-align: justify; ">In <a href="https://radicalcompanies.com/2022/03/17/radical-coins"><span style="font-size: smaller; ">RADICAL COIN</span></a>, I laid out a few ideas about money and what it would look like in a decentralized, transparent world; land and government are definitely harder topics for me. In this document I am laying out my thoughts about what the model for land would look like in a <span style="font-size: smaller; ">RADICAL</span> world.</p>
  <h2 style="font-size:30px; font-family:Courier New, monospace; ">The <span style="font-size:smaller; ">RADICAL</span> Land Model</h2>
@@ -75,7 +75,7 @@ image:    "icon-everybody-works-but-the-vacant-lot.svg"
    <p style="text-align: justify; ">The adjacent, hyper-local community also has a big say and can do significant works when combined with what other occupiers contribute to the fund. Ditto for the surrounding community.</p>
    <p style="text-align: justify; ">I am not sure about &ldquo;Region&rdquo; and &ldquo;State,&rdquo; thus the question marks, but I suspect the latter will be around for a long time.</p>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; ">What about the the Country and Military?</h1>
+<h1>What about the the Country and Military?</h1>
  <p style="text-align: justify; ">Note that there is no &ldquo;Region&rdquo; circle and this means that there would not be a fund that traditionally countries could draw for. Rather than a &ldquo;Region&rdquo; the way to decentralize it is to fund big, audacious, long-term projects (<em>e.g.</em>, space, fusion, and other research) individually. For example, companies and each of the circles above could contribute part of their funds to a Banner earmarked for a research area. I am not counting on the &ldquo;Region&rdquo; of people or &ldquo;Region&rdquo;—instead, I am counting on people&rsquo;s interests and their persuasive power when impassioned enough.</p>
  <h2 style="font-size:30px; font-family:Courier New, monospace; ">The Country?</h2>
   <p>Note that there is no &ldquo;Region&rdquo; circle and this means that there would not be a fund that traditionally countries could draw for. Rather than a &ldquo;Region&rdquo; the way to decentralize it is to fund big, audacious, long-term projects (<em>e.g.</em>, space, fusion, and other research) individually. For example, companies and each of the circles above could contribute part of their funds to a Banner earmarked for a research area. I am not counting on the &ldquo;Region&rdquo; of people or &ldquo;Region&rdquo;&mdash;instead, I am counting on people&rsquo;s interests and the persuasive power of their enthusiasm.</p>
@@ -83,7 +83,7 @@ image:    "icon-everybody-works-but-the-vacant-lot.svg"
   <p style="text-align: justify; ">Also, there is no funds for a military or any kind of state violence. It may take longer, but that&rsquo;s where we are heading.</p>
   <p id="fnref3" style="text-align: justify; ">But, how n&auml;ive, you might say, all it takes is a <em>few bad people</em> with weapons to take over everything, won’t it? Again, I am counting on &rsquo;s aversion to violence and how swiftly they can mobilize in a connected world to neutralize the violence of the &ldquo;Region&rdquo;<sup><a href="#fn3" rel="footnote">3</a></sup></p>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; ">Community Fund Governance</h1>
+<h1>Community Fund Governance</h1>
  <p>The &ldquo;Region&rdquo; in the pictures could be governed jointly or individually. For example, hyper-local community circles (26%) may join up to create a park. Surrounding communites (3%) may pool their funds to create a bullet train through the region. Keep in mind that when aggregated, Region and State circles have a pretty big pool of actual cash to create <em>common goods</em>.</p>
  <p style="font-family:courier new; text-align:center; width:80%; border:silver dotted 1px; margin:auto; margin-bottom:20px;  ">
   <img src="/assets/img/en-community-funds-intertwined.svg" alt="Five intertwined circles. the top two are intertwined at the Hyper-Local Community level (in yellow). Next two circle are intertwined at the Community level (l)ight orange). Next two are intertwined at the Region level (liht pink). The last two are intertwined at the State level (light brown)." title="Community Funds–Intertwined">
@@ -94,7 +94,7 @@ image:    "icon-everybody-works-but-the-vacant-lot.svg"
   <li>On the other hand, occupiers can pool their piece of a fund with the Community or other non-occupier circles to create <em>common goods</em>.</li>
  </ul>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; ">The <span style="font-size:smaller; ">RADICAL COMPANIES</span> Model</h1>
+<h1>The <span style="font-size:smaller; ">RADICAL COMPANIES</span> Model</h1>
  <p style="text-align: justify; ">It may be worth repeating here a few words about the <span style="font-size: smaller; ">RADICAL</span> framework and how it&rsquo;s different from our current world. Probably the most confusing thing about it is that a RADI<span style="font-size: smaller; ">RADICAL</span> world would be very similar to our current world. People will be the same with all our jealousies, overreactions, and habits. They will be embarrassed by overpromising and want to sweep under the proverbial rug.</p>
  <p style="text-align: justify; ">The only difference—the big difference—is that the <span style="font-size: smaller; ">RADICAL</span> system is centered around people&rsquo;s interdependence.</p>
  <p style="text-align: justify; ">Our current system is based on separating us: countries, towns, good and bad neighborhoods; political parties and their vastly different realities; need to know, secrecy, protection. This leaves us disconnected and drives us to isolation. Businesses are built on creating platforms to bring us back together, for a fee. This works for a world where money comes first, ahead of everything else.</p>
@@ -141,7 +141,7 @@ image:    "icon-everybody-works-but-the-vacant-lot.svg"
   </tbody>
  </table>
 
-<h1 style="font-size:40px; font-family:Courier New, monospace; ">Thriving Local Communities</h1>
+<h1>Thriving Local Communities</h1>
  <p id="fnref4" style="text-align: justify; ">As I see it, the <span style="font-size: smaller; ">RADICAL</span> model of co-ownership and co-management is the next stage in collaboration. Everything humanity has accomplished has been based on collaboration, but we have acted as if dominance by a few is the only way to achieve it.<sup><a href="#fn4" rel="footnote">4</a></sup></p>
  <p style="text-align: justify; ">The dominance model of collaboration has become an obstacle to real progress and it is now getting in the way of the next surge of human accomplishments. Now it&rsquo;s time to move on and build on the foundation of interdependence towards a higher level of collaboration.</p>
 
